# CanadaScraper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
canadastats/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  models.py  sync_service.py  utils.py
canadastats/app/: __init__.py  streamlit_app.py
canadastats/extract/: __init__.py  http_client.py  robots.py  throttler.py
canadastats/load/: __init__.py  repository.py
canadastats/sources/: base.py  bc_basketball.py  bc_football.py  hmhshl.py  rseq.py
canadastats/transform/: __init__.py  normalization.py
docs/: HANDOVER_CHECKLIST.md  NON_TECH_SETUP.md  OPERATIONS.md  SOURCE_LIMITATIONS.md
scripts/: remove_windows_scheduler.ps1  setup_windows_scheduler.ps1  update_windows_scheduler.ps1
tests/: test_dashboard_smoke.py  test_html_table_parser.py  test_repository_integration.py  test_robots_policy.py  test_rseq_parser.py
